# spacecrafter

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  TRADEMARKS  debug.bat  install_dependancies_mageia.sh  install_dependancies_ubuntu.sh  install_src.bat  install_src.sh
planetsephems/: CMakeLists.txt  elp82b.c  stellplanet.c  stellplanet.h
shaders/: CMakeLists.txt  VR360.frag  VR360.vert  atmosphere.frag  atmosphere.frag.spv  atmosphere.vert  atmosphere.vert.spv  atmosphere_ext.frag  atmosphere_ext.vert  body.vert  body_Axis.frag  body_Axis.frag.spv  body_Axis.vert  body_Axis.vert.spv  body_artificial.frag  body_artificial.geom  body_artificial.vert  body_bump.frag  body_bump.frag.spv  body_bump.vert  body_bump.vert.spv  body_halo.vert  body_moon_night.frag  body_moon_night.vert  body_night.frag  body_night.vert  body_night.vert.spv  body_night_tes.geom  body_night_tes.tesc  body_night_tes.tese  body_night_tes.vert  body_normal.frag  body_normal.geom  body_normal.vert  body_normal.vert.spv  body_normal_tes.geom  body_orbit2d.geom  body_orbit2d.geom.spv  body_ringed.frag  body_ringed.vert  (+151 more)
shaders/compiled/: atm.frag.spv  atm.tesc.spv  atm.tese.spv  atm.vert.spv  atmosphere.vert.spv  big_star.frag.spv  big_star.vert.spv  big_star_corona.frag.spv  big_star_halo.frag.spv  big_star_halo.vert.spv  bodyHints.frag.spv  bodyHints.vert.spv  body_Axis.frag.spv  body_Axis.vert.spv  body_artificial.frag.spv  body_artificial.geom.spv  body_artificial.vert.spv  body_artificial_notex.frag.spv  body_artificial_shadow_notex.frag.spv  body_artificial_shadow_tex.frag.spv  body_artificial_tex.frag.spv  body_bump.frag.spv  body_bump.vert.spv  body_depth_trace.vert.spv  body_halo.frag.spv  body_halo.geom.spv  body_halo.vert.spv  body_night.frag.spv  body_night.vert.spv  body_normal.frag.spv  body_normal.vert.spv  body_normal_tes.frag.spv  body_normal_tes.geom.spv  body_normal_tes.tesc.spv  body_normal_tes.tese.spv  body_normal_tes.vert.spv  body_orbit2d.frag.spv  body_orbit2d.geom.spv  body_orbit2d.vert.spv  body_orbit3d.geom.spv  (+133 more)
shaders/optimized/: inVolumObj3DPacked.frag.spvasm  shadow.comp  shadow.comp.spvasm
shaders/src/: SmartMipmap.comp  atm.frag  atm.tesc  atm.tese  atm.vert  atmosphere.frag  atmosphere.vert  big_star.frag  big_star.vert  big_star_corona.frag  big_star_halo.frag  big_star_halo.vert  bodyHints.frag  bodyHints.vert  body_Axis.frag  body_Axis.vert  body_artificial.frag  body_artificial.geom  body_artificial.vert  body_artificial_notex.frag  body_artificial_shadow_notex.frag  body_artificial_shadow_tex.frag  body_artificial_tex.frag  body_bump.frag  body_bump.vert  body_depth_trace.vert  body_halo.frag  body_halo.geom  body_halo.vert  body_night.frag  body_night.vert  body_normal.frag  body_normal.vert  body_normal_tes.frag  body_normal_tes.geom  body_normal_tes.tesc  body_normal_tes.tese  body_normal_tes.vert  body_orbit2d.frag  body_orbit2d.geom  (+169 more)
shaders/unused/: model3D.vert
src/: CMakeLists.txt  capture.hpp  config.h  config.h.in  main.cpp  spacecrafter.hpp  tiny_jpeg.h
src/appModule/: app.cpp  app.hpp  appDraw.cpp  appDraw.hpp  appModule.hpp  fontFactory.cpp  fontFactory.hpp  fps.cpp  fps.hpp  mkfifo.cpp  mkfifo.hpp  save_screen.cpp  save_screen.hpp  save_screen_interface.cpp  save_screen_interface.hpp  screenFader.cpp  screenFader.hpp  space_date.cpp  space_date.hpp
src/atmosphereModule/: atmosphere.cpp  atmosphere.hpp  atmosphere_commun.hpp  skybright.cpp  skybright.hpp  skylight.cpp  skylight.hpp  tone_reproductor.cpp  tone_reproductor.hpp
src/bodyModule/: atm_ext.cpp  atm_ext.hpp  atmosphere_ext.cpp  atmosphere_ext.hpp  axis.cpp  axis.hpp  body.cpp  body.hpp  bodyShader.cpp  bodyShader.hpp  body_artificial.cpp  body_artificial.hpp  body_bigbody.cpp  body_bigbody.hpp  body_center.cpp  body_center.hpp  body_color.cpp  body_color.hpp  body_common.hpp  body_decor.cpp  body_decor.hpp  body_moon.cpp  body_moon.hpp  body_smallbody.cpp  body_smallbody.hpp  body_star.cpp  body_star.hpp  body_sun.cpp  body_sun.hpp  body_tesselation.hpp  body_trace.cpp  body_trace.hpp  halo.cpp  halo.hpp  hints.cpp  hints.hpp  orbit.cpp  orbit.hpp  orbit_2d.cpp  orbit_2d.hpp  (+32 more)
src/coreModule/: CoreModule.hpp  SkyGridLine_common.hpp  StarGalaxy.cpp  StarGalaxy.hpp  TullyWrapper.hpp  backup_mgr.cpp  backup_mgr.hpp  callback_helpers.hpp  callbacks.hpp  cardinals.cpp  cardinals.hpp  cloudNavigator.cpp  cloudNavigator.hpp  constellation.cpp  constellation.hpp  constellation_mgr.cpp  constellation_mgr.hpp  core.cpp  core.hpp  coreFont.cpp  coreFont.hpp  coreLink.cpp  coreLink.hpp  core_common.hpp  core_executor.cpp  core_executor.hpp  dso3d.cpp  dso3d.hpp  dsoNavigator.cpp  dsoNavigator.hpp  fog.cpp  fog.hpp  grid.cpp  grid.hpp  illuminate.cpp  illuminate.hpp  illuminate_mgr.cpp  illuminate_mgr.hpp  landscape.cpp  landscape.hpp  (+52 more)
src/eventModule/: AltitudeEvent.hpp  AppCommandEvent.hpp  AppCommandHandler.cpp  AppCommandHandler.hpp  CoreEvent.hpp  CoreHandler.cpp  CoreHandler.hpp  EventAltitudeHandler.cpp  EventAltitudeHandler.hpp  EventCommand.hpp  EventCommandHandler.cpp  EventCommandHandler.hpp  EventFlag.hpp  EventFlagHandler.cpp  EventFlagHandler.hpp  EventFps.hpp  EventFpsHandler.cpp  EventFpsHandler.hpp  EventObserver.hpp  EventObserverHandler.cpp  EventObserverHandler.hpp  EventSaveScreen.hpp  EventSaveScreenHandler.cpp  EventSaveScreenHandler.hpp  EventScreenFader.hpp  EventScreenFaderHandler.cpp  EventScreenFaderHandler.hpp  EventScript.hpp  EventScriptHandler.cpp  EventScriptHandler.hpp  EventVideo.hpp  EventVideoHandler.cpp  EventVideoHandler.hpp  FlagEvent.hpp  ScreenFaderEvent.hpp  event.cpp  event.hpp  event_handler.cpp  event_handler.hpp  event_handler_canvas.hpp  (+3 more)
src/executorModule/: executor.cpp  executor.hpp  executorModule.hpp  inGalaxyModule.cpp  inGalaxyModule.hpp  inPauseModule.cpp  inPauseModule.hpp  inSandBoxModule.cpp  inSandBoxModule.hpp  inUniverseModule.cpp  inUniverseModule.hpp  solarSystemModule.cpp  solarSystemModule.hpp  stellarSystemModule.cpp  stellarSystemModule.hpp
src/experimentalModule/: BodyModule.hpp  Camera.cpp  (+17 more)
(+633 files in other folders)
